@@ -1,6 +1,10 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
+requires "Dist::Zilla" => "6.030";
+requires "Moose" => "2.2206";
+requires "namespace::clean" => "0.27";
+requires "perl" => "v5.26.0";
 
 on 'test' => sub {
   requires "File::Spec" => "0";
@@ -16,6 +20,7 @@ on 'configure' => sub {
 
 on 'develop' => sub {
   requires "Dist::Zilla" => "5";
+  requires "Dist::Zilla::Plugin::Prereqs" => "0";
   requires "Dist::Zilla::PluginBundle::Author::REFECO" => "0";
   requires "Software::License::MIT" => "0";
   requires "Test::CPAN::Meta" => "0";
