@@ -4,6 +4,11 @@ license = MIT
 copyright_holder = REFECO
 copyright_year   = 2023
 
-version = 0.004
+version = 0.005
 
 [@Author::REFECO]
+[Prereqs]
+perl                        = v5.26
+Moose                       = 2.2206
+namespace::clean            = 0.27
+Dist::Zilla                 = 6.030
