@@ -1,7 +1,10 @@
 {{$NEXT}}
-
+    [BugFixes]
+    - Add prereqs
+    [Improvments]
+    - Github actions workflow
 0.004     2023-11-09 01:29:54-03:00 America/Sao_Paulo
-
+    - Add MetaProvides::Package
 0.003     2023-10-15 23:39:20-03:00 America/Sao_Paulo
     - Fix readme and include perlcritic and perltidy to build
 0.002     2023-10-14 22:04:48-03:00 America/Sao_Paulo
